<resources>
    <string name="app_name">connect four</string>

    <string name="action_settings">Settings</string>
    <string name="player1_wins">Pl Wins: 0</string>
    <string name="player2_wins">P2 Wins: 0</string>
    <string name="player1">P1</string>
    <string name="player2">P2</string>
    <string name="your_turn">Your Turn!</string>
    <string name="title_activity_options_menu">OptionsMenu</string>
    <string name="hello_world">Hello world!</string>
    <string name="options">Options</string>
    <string name="players">Players</string>
    <string name="aiDiff">AI Difficulty</string>
    <string name="easy">Easy</string>
    <string name="hard">Hard</string>
    <string name="tokenColor">Token Color</string>
    <string name="bluegreen">Blue, Green</string>
    <string name="yellowred">Yellow, Red</string>
    <string name="savegoback"><![CDATA[Save & Go Back]]></string>
    <string name="cancel">Cancel</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_game_main">Shall We Play A Game?</string>
    <string name="save_config">Save As Default Configuration</string>
    <string name="begin_game">Begin Game</string>
    <string name="name_label">Name:</string>
    <string name="server_ip_code">Server\'s IP Code:</string>
    <string name="remove_player">Remove Player</string>
    <string name="add_player">Add Player</string>
    <string name="player_name">Player Name</string>
    <string name="player_type">Player Type</string>
    <string name="guest">Guest</string>
    <string name="save_config_as_default">Save this Configuration as the Default</string><string name="start_the_game">Start Game!</string>

    <string name="dialog_continue_label">Continue Playing Game</string>
    <string name="dialog_quit_label">Quit</string>
    <string name="dialog_quit_question">Do you really want to quit?</string>
    <string name="local_tab">Local Game</string>
    <string name="remote_tab">Remote Game</string>
    <string name="connectfour">Connect Four</string>
</resources>
